--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -1,7 +1,7 @@
-# Core configuration - edit these values
-base_domain: "example.com"                    # Your domain name
-letsencrypt_email: "you@example.com"           # Email for Let's Encrypt cert notifications
-timezone: "America/New_York"                   # Your timezone (see: timedatectl list-timezones)
+# Core configuration - load from environment variables
+base_domain: "{{ lookup('env', 'BASE_DOMAIN') }}"
+letsencrypt_email: "{{ lookup('env', 'LETSENCRYPT_EMAIL') }}"
+timezone: "{{ lookup('env', 'TIMEZONE') }}"
 
 # Service domains (auto-derived from base_domain)
 matrix_domain: "matrix.{{ base_domain }}"
@@ -20,8 +20,7 @@ pelican_wings_version: "v1.0.0-beta22"
 pelican_admin_email: "{{ letsencrypt_email }}"
 
 # Tailscale configuration
-tailscale_auth_key: ""                         # Leave empty - will use interactive auth
-                                               # Or get an auth key from https://login.tailscale.com/admin/settings/keys
+tailscale_auth_key: "{{ lookup('env', 'TAILSCALE_AUTH_KEY') }}"  # From environment variable
 
 # System configuration
 docker_users:
