--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -1,7 +1,7 @@
 all:
   hosts:
     homelab:
-      ansible_host: YOUR_SERVER_IP  # Replace with your Oracle instance public IP
-      ansible_user: ubuntu
-      ansible_ssh_private_key_file: ~/.ssh/id_rsa  # Replace with your SSH key path
-      ansible_python_interpreter: /usr/bin/python3
+      ansible_host: "{{ lookup('env', 'ANSIBLE_HOST') }}"
+      ansible_user: "{{ lookup('env', 'ANSIBLE_USER') }}"
+      ansible_ssh_private_key_file: "{{ lookup('env', 'ANSIBLE_SSH_PRIVATE_KEY_FILE') }}"
+      ansible_python_interpreter: "{{ lookup('env', 'ANSIBLE_PYTHON_INTERPRETER') }}"
